[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/Enemies/jumpSlime.gd" type="Script" id=1]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-02.png" type="Texture" id=2]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-09.png" type="Texture" id=4]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-06.png" type="Texture" id=5]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-03.png" type="Texture" id=6]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-07.png" type="Texture" id=7]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-04.png" type="Texture" id=8]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-05.png" type="Texture" id=9]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/idle/jumpSlime-Idle-08.png" type="Texture" id=10]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/jump/jumpSlime-Idle-11.png" type="Texture" id=11]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/jump/jumpSlime-Idle-14.png" type="Texture" id=12]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/jump/jumpSlime-Idle-16.png" type="Texture" id=13]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/jump/jumpSlime-Idle-12.png" type="Texture" id=14]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/jump/jumpSlime-Idle-13.png" type="Texture" id=15]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/jump/jumpSlime-Idle-15.png" type="Texture" id=16]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/jump/jumpSlime-Idle-10.png" type="Texture" id=17]
[ext_resource path="res://Sprites/enemy/slimes/enemies/jumpSlime/jump/jumpSlime-Idle-17.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Enemies/bounceZone.tscn" type="PackedScene" id=19]
[ext_resource path="res://Lifebar.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/FCTManager.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/Enemies/hitZone.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/GooSpat.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/BloodSplatterComponent.tscn" type="PackedScene" id=24]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.5, 11.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 18 ) ],
"loop": false,
"name": "jump",
"speed": 20.0
} ]

[node name="GreenSlime" type="KinematicBody2D"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
collision_layer = 32
collision_mask = 137
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 2
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="topchecker" parent="." instance=ExtResource( 19 )]
position = Vector2( -0.523, -1.733 )
scale = Vector2( 3.093, 1.214 )

[node name="HealthDisplay" parent="." instance=ExtResource( 20 )]
position = Vector2( 0, -17 )

[node name="FCTManager" parent="." instance=ExtResource( 21 )]
position = Vector2( 0, -17 )

[node name="hitZone" parent="." instance=ExtResource( 22 )]
position = Vector2( -0.504, 0.608 )
scale = Vector2( 7.889, 4.573 )

[node name="GooSpat" parent="." instance=ExtResource( 23 )]
position = Vector2( 0, -10 )
scale = Vector2( 5, 5 )

[node name="BloodSplatterComponent" parent="." instance=ExtResource( 24 )]

[connection signal="body_entered" from="topchecker" to="." method="_on_topchecker_body_entered"]
